# fuzzy-extractor

./: Cargo.toml  Makefile  README.md
benches/: bench.rs
src/: ecc.rs  ecc_rs.rs  ecc_trait.rs  errors.rs  fuzzy_extractor.rs  lib.rs  secure_sketch.rs  simple_hash_kdf.rs
src/ecc/: ecc_rs.rs  ecc_trait.rs  secure_sketch.rs
