[package]
name = "rust-fuzzy-extractor"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["rand"]
no_std = []
jemalloc = ["std", "dep:jemallocator", "dep:jemalloc-ctl"]

[dependencies]
reed-solomon = "0.2.1"
rand = { version = "0.8", optional = true, features = ["std"] }
libm = { version = "0.2", default-features = false }
jemalloc-ctl = { version = "0.5", optional = true }
jemallocator = { version = "0.5", optional = true }
lazy_static = "1.4"

[dev-dependencies]
# Ensure jemalloc-ctl and jemallocator are included for benchmarking
jemalloc-ctl = "0.5"
jemallocator = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
