[package]
name = "rust-fuzzy-extractor"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["rand"]
no_std = []

[dependencies]
reed-solomon = "0.2.1"
rand = { version = "0.8", optional = true, features = ["std"] }
libm = { version = "0.2", default-features = false }
lazy_static = "1.4"
sha2 = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
